# SproutLang

./: .clang-format  .gitignore  CMakeLists.txt  README.md
pages/: index.css  index.html
src/compiler/: compiler.hpp
src/compiler/lexer/: lexer.cpp  lexer.hpp  tokens.hpp  toxens.hpp
test/compiler/: lexer_test.cpp
